bgdk/overlays/cluster 2/bgd-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liferay-prod
spec:
  replicas: 1
